--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/son1122/Backend-Project-3/issues"
   },
-  "homepage": "https://github.com/son1122/Backend-Project-3#readme"
+  "homepage": "https://github.com/son1122/Backend-Project-3#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
