--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "1234",
-    "database": "pokemon_dev",
+    "database": "pos_system",
     "host": "127.0.0.1",
     "dialect": "postgres",
     "port": "5433"
