--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # - VS Code
 # - Node (typically project-level gitignore, not global)
 
+# Project 3 Manually added
+config.json
+
 # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # macOS
 # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
