--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 # - Node (typically project-level gitignore, not global)
 
 # Project 3 Manually added
-config.json
-
+**/.env
 # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 # macOS
 # >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
