--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/son1122/Backend-Project-3#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "method-override": "^3.0.0"
   }
 }
