--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0"
+  },
+  "devDependencies": {
+    "sequelize-erd": "^1.3.1"
   }
 }
