--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.28.0"
+    "react-pure-render": "^1.0.2",
+    "sequelize": "^6.28.0",
+    "swr": "^2.0.0",
+    "use-supercluster": "^0.4.0"
   },
   "devDependencies": {
     "sequelize-erd": "^1.3.1"
